// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography Tests H1Tag Tests H1 is primary colour (Navy Blue, #0000BD) 1`] = `
.c0 {
  font: 900 1.4em/1.4rem Verdana,Arial,Helvetica,sans-serif;
  color: #00008D;
  text-align: center;
  border-bottom: 0.2rem #00008D solid;
  padding-bottom: 0.2rem;
}

@media (max-width:768px) {
  .c0 {
    font: 900 1.4em/1.4rem Verdana,Arial,Helvetica,sans-serif;
  }
}

<h1
  className="c0"
/>
`;

exports[`Typography Tests H1TagGreen Tests H1TagGreen is green (#90EE90) 1`] = `
.c0 {
  font: 900 2em/2rem Verdana,Arial,Helvetica,sans-serif;
  color: #90EE90;
}

@media (max-width:768px) {
  .c0 {
    font: 900 1.4em/1.4rem Verdana,Arial,Helvetica,sans-serif;
  }
}

<h1
  className="c0"
/>
`;

exports[`Typography Tests H1TagRed Tests H1TagRed is red (#FB2020) 1`] = `
.c0 {
  font: 900 2em/2rem Verdana,Arial,Helvetica,sans-serif;
  color: #FB2020;
}

@media (max-width:768px) {
  .c0 {
    font: 900 1.4em/1.4rem Verdana,Arial,Helvetica,sans-serif;
  }
}

<h1
  className="c0"
/>
`;

exports[`Typography Tests H2Tag Tests H1Tag is secondary colour (Neon Purple, #F900F1) 1`] = `
.c0 {
  font: 900 1.1em/1.1rem Verdana,Arial,Helvetica,sans-serif;
  color: #F900F1;
  line-height: 1rem;
}

<h2
  className="c0"
/>
`;

exports[`Typography Tests H3Tag Tests H3Tag is bright colour (Bright Red, #FB2020) 1`] = `
.c0 {
  font: 900 1.8em/1.8rem Verdana,Arial,Helvetica,sans-serif;
  color: #FB2020;
  line-height: 1rem;
}

<h3
  className="c0"
/>
`;

exports[`Typography Tests H4Tag Tests H4Tag is secondary colour (Neon Purple, #F900F1) 1`] = `
.c0 {
  font: 900 0.8em/0.8rem Verdana,Arial,Helvetica,sans-serif;
  color: #F900F1;
  line-height: 1rem;
}

<h4
  className="c0"
/>
`;
